[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/industrial.v2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/JumpPlatform.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Timer.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=2]
resource_name = "DownToUp"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("BoxSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 161, 162 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlatformSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1023, 130 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BoxCollisionShape:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -14.5 ), Vector2( 8, -19.5 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "UpToDown"
tracks/0/type = "value"
tracks/0/path = NodePath("BoxSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 162, 161 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlatformSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 130, 1023 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BoxCollisionShape:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -19.5 ), Vector2( 8, -14.5 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 7.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 1.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 3 )

[node name="JumpPlatform" type="KinematicBody2D"]
position = Vector2( 0, 16 )
z_index = -2
collision_layer = 2
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/DownToUp = SubResource( 2 )
anims/UpToDown = SubResource( 4 )

[node name="PlatformCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 8, -7.5 )
shape = SubResource( 1 )

[node name="BoxCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 8, -14.5 )
shape = SubResource( 5 )

[node name="Timer" parent="." instance=ExtResource( 3 )]

[node name="BoxSprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
z_index = -2
texture = ExtResource( 1 )
offset = Vector2( 8, 8 )
hframes = 32
vframes = 32
frame = 161

[node name="PlatformSprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
z_index = -2
texture = ExtResource( 1 )
offset = Vector2( 8, 8 )
hframes = 32
vframes = 32
frame = 1023

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 8, -19 )
shape = SubResource( 6 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
